@@ -1,3 +1,9 @@
+2008-04-22  Tomas Mraz <t8m@centrum.cz>
+
+	* modules/pam_selinux/pam_selinux.c(pam_sm_close_sesion): Fix
+	regression from the change from 2008-03-20. setexeccon() must be
+	called also with NULL prev_context.
+
 2008-04-16  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* release version 1.0.1
